# its_a_scam

./: .gitignore  .readthedocs.yaml  README.md  configure.ac
doc/: README.md  mkdocs.yml
doc/content/: 10x_atac_seq.md  10x_atac_seq_qc.md  10x_atac_seq_quick_start.md  10x_gex.md  add_barcode_to_fastq_name.md  bam_to_fragments.md  barcode_count.md  barcode_match.md  bc_atac_genomic_features.md  bc_count_matrix.md  bc_coverage.md  bc_feature_matrix.md  bc_filter_alignments.md  bc_flagstat.md  bc_frag_dist.md  bc_genebody_coverage.md  bc_gex_genomic_features.md  bc_in_region.md  bc_mismatch_matrix.md  bc_tss_enrichment.md  index.md  installation.md  nametag_to_samtag.md  parse_wt.md  pseudobulk_fragment_coverage.md  pseudobulk_fragment_metagene.md  sc_gex_qc.md  sc_rnaseq_feature_matrix.md  todo.md  tss_enrichment.md
doc/in_progress/: 10x_gex.md  bc_flagstat.md  bc_fragment_coverage.md  bc_in_region.md  todo.md
scripts/: atacFlagstat.R  atacFragLength.R  atacGenomicRegionStats.R  atacMetagene.R  atacTssEnrichment.R  fragmentsToPeakMatrix.R  gexGenebodyCoverage.R  gexGenomicRegionStats.R  parse3primeCountMatrix.R  parseRandhexCollapse.R
src/: AlignedGenomicFeature.cpp  AlignedGenomicFeature.hpp  AlignedOverlapGenomicFeature.cpp  AlignedOverlapGenomicFeature.hpp  AlignmentMismatches.cpp  AlignmentMismatches.hpp  BedReader.cpp  BedReader.hpp  FastqReader.cpp  FastqReader.hpp  FeatureVector.cpp  FeatureVector.hpp  GeneCount.cpp  GeneCount.hpp  GenomeReader.cpp  GenomeReader.hpp  GenomicArray.cpp  GenomicArray.hpp  GenomicRegion.cpp  GenomicRegion.hpp  GenomicStepVector.hpp  GtfReader.cpp  GtfReader.hpp  Makefile  Makefile.am  PreprocessGff.cpp  PreprocessGff.hpp  SamEntry.cpp  SamEntry.hpp  SamReader.cpp  SamReader.hpp  StepVector.cpp  StepVector.hpp  add_barcode_to_fastq_name.cpp  alignment_depth.cpp  alignment_gc_distribution.cpp  alignment_length_distribution.cpp  alignment_quality_distribution  alignment_quality_distribution.cpp  bam_to_fragments  (+34 more)
