bin_PROGRAMS = add_barcode_to_fastq_name \
               alignment_depth \
               alignment_gc_distribution \
               barcode_count \
               bc_coverage \
               bc_feature_matrix \
               bc_flagstat \
               bc_frag_dist \
               bc_fragment_coverage \
               bc_in_region \
               bc_mismatch_matrix \
               bc_tss_matrix \
               gene_count \
               genome_stats \
               genomic_feature_count \
               get_clipped_bases \
               get_reference_base \
               mismatch_jaccard \
               mismatch_profile \
               mismatch_profile_vaf \
               nametag_to_samtag \
               pseudobulk_fragment_coverage \
               sc_rnaseq_feature_matrix \
               tss_enrichment \
               bc_filter_alignments \
               pseudobulk_fragment_metagene \
               bam_to_fragments \
               barcode_match

LDADD = -lgcat -lhts


add_barcode_to_fastq_name_SOURCES = add_barcode_to_fastq_name.cpp 

alignment_depth_SOURCES = alignment_depth.cpp

alignment_gc_distribution_SOURCES = alignment_gc_distribution.cpp

barcode_count_SOURCES = barcode_count.cpp

bc_coverage_SOURCES = bc_coverage.cpp

bc_feature_matrix_SOURCES = bc_feature_matrix.cpp

bc_flagstat_SOURCES = bc_flagstat.cpp

bc_frag_dist_SOURCES = bc_frag_dist.cpp

bc_fragment_coverage_SOURCES = bc_fragment_coverage.cpp

bc_in_region_SOURCES = bc_in_region.cpp

bc_mismatch_matrix_SOURCES = bc_mismatch_matrix.cpp

bc_tss_matrix_SOURCES = bc_tss_matrix.cpp

gene_count_SOURCES = gene_count.cpp

genome_stats_SOURCES = genome_stats.cpp

genomic_feature_count_SOURCES = genomic_feature_count.cpp

get_clipped_bases_SOURCES = get_clipped_bases.cpp

get_reference_base_SOURCES = get_reference_base.cpp

mismatch_jaccard_SOURCES = mismatch_jaccard.cpp

mismatch_profile_SOURCES = mismatch_profile.cpp

mismatch_profile_vaf_SOURCES = mismatch_profile_vaf.cpp

nametag_to_samtag_SOURCES = nametag_to_samtag.cpp

pseudobulk_fragment_coverage_SOURCES = pseudobulk_fragment_coverage.cpp

sc_rnaseq_feature_matrix_SOURCES = sc_rnaseq_feature_matrix.cpp

tss_enrichment_SOURCES = tss_enrichment.cpp

bc_filter_alignments_SOURCES = bc_filter_alignments.cpp

pseudobulk_fragment_metagene_SOURCES = pseudobulk_fragment_metagene.cpp

bam_to_fragments_SOURCES = bam_to_fragments.cpp

barcode_match_SOURCES = barcode_match.cpp
