bin_PROGRAMS = add_barcode_to_fastq_name \
               barcode_count \
               bc_coverage \
               bc_feature_matrix \
               bc_flagstat \
               bc_frag_dist \
               bc_fragment_coverage \
               bc_in_region \
               bc_mismatch_matrix \
               bc_count_matrix \
               nametag_to_samtag \
               pseudobulk_fragment_coverage \
               sc_rnaseq_feature_matrix \
               tss_enrichment \
               bc_filter_alignments \
               pseudobulk_fragment_metagene \
               bam_to_fragments \
               barcode_match \
               bc_genebody_coverage

LDADD = -lgcat -lhts

AM_CXXFLAGS = -O2 -Wall -std=c++11

add_barcode_to_fastq_name_SOURCES = add_barcode_to_fastq_name.cpp 

barcode_count_SOURCES = barcode_count.cpp

bc_coverage_SOURCES = bc_coverage.cpp

bc_feature_matrix_SOURCES = bc_feature_matrix.cpp

bc_flagstat_SOURCES = bc_flagstat.cpp

bc_frag_dist_SOURCES = bc_frag_dist.cpp

bc_fragment_coverage_SOURCES = bc_fragment_coverage.cpp

bc_in_region_SOURCES = bc_in_region.cpp

bc_mismatch_matrix_SOURCES = bc_mismatch_matrix.cpp

bc_count_matrix_SOURCES = bc_count_matrix.cpp

nametag_to_samtag_SOURCES = nametag_to_samtag.cpp

pseudobulk_fragment_coverage_SOURCES = pseudobulk_fragment_coverage.cpp

sc_rnaseq_feature_matrix_SOURCES = sc_rnaseq_feature_matrix.cpp

tss_enrichment_SOURCES = tss_enrichment.cpp

bc_filter_alignments_SOURCES = bc_filter_alignments.cpp

pseudobulk_fragment_metagene_SOURCES = pseudobulk_fragment_metagene.cpp

bam_to_fragments_SOURCES = bam_to_fragments.cpp

barcode_match_SOURCES = barcode_match.cpp

bc_genebody_coverage_SOURCES = bc_genebody_coverage.cpp 
